[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gfa-auth-api"
version = "1.0.0"
description = "GFA Unified Admin API"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.110.1",
    "uvicorn==0.25.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.6.4",
    "email-validator>=2.2.0",
    "pyjwt>=2.10.1",
    "bcrypt==4.1.3",
    "mysql-connector-python>=9.0.0",
    "sqlalchemy>=2.0.0",
]
